--- a/TUDthesis.tex
+++ b/TUDthesis.tex
@@ -5,6 +5,7 @@
 \usepackage[scaled]{uarial}
 \usepackage{amsmath}
 \usepackage{enumitem}
+\usepackage{epsfig}
 \newcommand{\getmydate}{%
   \ifcase\month%
     \or Januar\or Februar\or M\"arz%
@@ -146,9 +147,9 @@ write about ILP, MCF, MIP
 
 All the previous heuristic approaches presents VN embedding methods with clear separation of node mapping and link mapping. Embedding process is carried out in two phases by embedding virtual nodes in first phase and then embedding virtual links in another phase. Embedding VNs without any relation between node mapping and edge mapping will restrict the solution space for VNE problem and may result in poor performance of the algorithm.  \newline
 
-A coordinated node and link mapping is presented in the work \cite{coord_map} by formulating VNE problem as a mixed integer program (MIP). This work provides the basics for next set of VNE algorithms that are more effective in mapping VNs on to physical substrate. MIP [Mixed Integer Programming] problem contains decision variables of an objective function. These variables are constrained to be integer values and are used to model yes or no decisions. The objective of such a problem is a linear function that can be minimized or maximized. Such kind of objective functions with constraints is useful in solving optimization problems like optimal resource allocation. \newline
+A coordinated node and link mapping is presented in the work \cite{coord_map} by formulating VNE problem as Mixed Integer Programming (MIP). This work provides the basics for next set of VNE algorithms that are more effective in mapping VNs on to physical substrate. MIP problem contains decision variables of an objective function. These variables are constrained to be integer values and are used to model yes or no decisions. The objective of such a problem is a linear function that can be minimized or maximized. Such kind of objective functions with constraints is useful in solving optimization problems like optimal resource allocation. \newline
 
-In coordinated node and link mapping \cite{coord_map} a better correlation between node mappings and link mappings is introduced. Two VNE algorithms 1) Deterministic Virtual Network Embedding (D-ViNE) and 2) Randomized Virtual Network Embedding (R-ViNE) are presented. These algorithms allow mapping of virtual links to physical links right after the mapping of virtual nodes is performed. Since solving MIP is known to be NP- hard, using MIP for optimal VN mapping is also NP-hard. So the integer program is made as linear programming formulation.  After that above mentioned algorithms D-ViNE and R-ViNE are used in linear programming solution to approximate the values of binary variables in original MIP. Then mapping of virtual nodes and virtual links is performed. This wok tries to address the limitations of heuristic approach such as a) embedding offline VNs b) ignoring node or link requirement c) assuming substrate capacity as infinite and d) assuming all VN topology similar.  This method focuses mainly on embedding online VNs using MIP formulations.\newline
+In coordinated node and link mapping \cite{coord_map} a better correlation between node mappings and link mappings is introduced. Two VNE algorithms 1) Deterministic Virtual Network Embedding (D-ViNE) and 2) Randomized Virtual Network Embedding (R-ViNE) are presented. These algorithms allow mapping of virtual links to physical links right after the mapping of virtual nodes is performed. Since solving MIP is known to be NP- hard, using MIP for optimal VN mapping is also NP-hard. So the integer program is made as linear programming formulation.  After that above mentioned algorithms D-ViNE and R-ViNE are used in linear programming solution to approximate the values of binary variables in original MIP. Then mapping of virtual nodes and virtual links is performed. This work tries to address the limitations of heuristic approach such as a) embedding offline VNs b) ignoring node or link requirement c) assuming substrate capacity as infinite and d) assuming all VN topology similar.  This method focuses mainly on embedding online VNs using MIP formulations.\newline
 
 \begin{figure}[h]
 	\centering
@@ -195,12 +196,14 @@ As we mentioned earlier, objective functions can be maximized (minimized) depend
 The methods proposed above allows coordinated link and node mappings unlike heuristic methods where either node mapping or link mapping is performed using some greedy techniques. The new mathematical approach using MIP formulations is also presented for VN provisioning which increases quality of heuristic methods. This approach becomes basis for next set of MIP based VNE algorithms that try to optimally allocate resources to VNs. It is to be noted that coordination between mappings increases solution space and also increase in VN acceptance ratio. \newline
 
 \newpage
-\subsubsection{Cross-Domain Embedding} \label{sssec:cde}
-Heuristic and coordinated link and node mapping approaches introduced VN provisioning techniques using max-flow/min-cut and Inger Linear Programming methods respectively. Both approaches did not discuss on embedding VNs on multiple substrate networks and also are not optimal solutions. Embedding VNs across multiple substrates enables increased VN provisioning which in turn reduces cost of the services running on them. VNs that span over multiple substrates enables cooperation between providers and instant deployment of multimedia services. The efficient way to do this is by running multimedia services on VNs with their resources spanning multiple physical networks.\newline
+\subsubsection{Cross-Domain Embedding} \label{CDE}
+Heuristic and coordinated link and node mapping approaches introduced VN provisioning techniques using max-flow/min-cut and Integer Linear Programming methods respectively. Both approaches did not discuss on embedding VNs on multiple substrate networks and also are not optimal solutions. Embedding VNs across multiple substrates enables increased VN provisioning which in turn reduces cost of the services running on them. VNs that span over multiple substrates enables cooperation between providers and instant deployment of multimedia services. The efficient way to do this is by running multimedia services on VNs with their resources spanning multiple physical networks.\newline
 
-Mapping VNs over multiple physical substrates arises one important question. That is, how to split VN request over the substrates while reducing the cost for infrastructure providers (infps). Author in \cite{vn_multiple} introduces algorithm, which is first of its kind, for mapping VNs over multiple substrates. Splitting VNs is solved using both heuristic and exact solution (Linear programming). Also algorithm to simultaneously map virtual links and virtual nodes is presented. VNE problem is formulated by considering the participants: infrastructure provider (infp) and VN provider. Mapping VNs over multiple physical substrates is performed in three steps, 1) Resource matching 2) Embedding and 3) Binding. infp must publish its resource details to VN providers and when a VN provider receives VN request, identify suitable substrates based on the resource information exposed by every infp. VN provider must split the VN request to match against each infp at a high level of abstraction. Each single infp will embed the virtual node and virtual link on the appropriate substrate node and substrate link identified in matching phase. The following section explains the three steps (matching, embedding, binding) in details.\newline
+Embedding VNs in single substrate is often non-realistic in today's world of increased number of internet users and its services. Embedding across multiple domains are more practical because, for one substrate it is almost impossible to manage an entire virtual network end-to-end. Inter-domain (cross-domain) embedding provides the service providers, a low cost end-to-end services which in turn decreases the cost of  internet services to the end users. Different internet services have different requirements like data transmission across geographically separated networks. Such services require VNs across multiple domains. But inter-domain embedding comes with the cost of knowing topology information of all the underlying domains which is another challenge addressed in the recent research .\newline
 
-Both substrate and VN request is modeled as a wighted graph G = (V, E) where 'V' is set of nodes and 'E' is set of links connecting those nodes. Substrate netwrok is represented by a graph $G^{S} = (N^{S}, L^{S})$ where 'S' denotes substrate, VN request is represented by a graph $G^{V} = (N^{V}, L^{V})$ where 'V' represents virtual network. A substrate $G^{S}$ belonging to a particular infp is denoted by $G^{S}_{infp}$.\newline
+Mapping VNs over multiple physical substrates arises one important question. That is, how to split VN request over the substrates while reducing the cost for infrastructure providers (infps). Author in \cite{vn_multiple} introduces algorithm, which is first of its kind, for mapping VNs over multiple substrates. Splitting VNs is solved using both heuristic and Linear programming method. Also algorithm to simultaneously map virtual links and virtual nodes is presented. VNE problem is formulated by considering the participants: infrastructure provider (infp) and VN provider. Mapping VNs over multiple physical substrates is performed in three steps, 1) Resource matching 2) Embedding and 3) Binding. infp must publish its resource details to VN providers and when a VN provider receives VN request, identify suitable substrates based on the resource information exposed by every infp. VN provider must split the VN request to match against each infp at a high level of abstraction. Each single infp will embed the virtual node and virtual link on the appropriate substrate node and substrate link identified in matching phase. The following section explains the three steps (matching, embedding, binding) in details.\newline
+
+Both substrate and VN request is modelled as a weighted graph G = (V, E) where 'V' is set of nodes and 'E' is set of links connecting those nodes. Substrate network is represented by a graph $G^{S} = (N^{S}, L^{S})$ where 'S' denotes substrate, VN request is represented by a graph $G^{V} = (N^{V}, L^{V})$ where 'V' represents virtual network. A substrate $G^{S}$ belonging to a particular infp is denoted by $G^{S}_{infp}$.\newline
 
 1. Resource Matching: VN provider performs resource matching phase based on each VN request resource descriptions and infp resource descriptions. Every node whether its a virtual node or a substrate node includes details of links attached to it. So, resource matching is only performed between nodes of VN request and physical substrate. 	In this phase a set of substrate nodes $Match(n^{v})$ capable of hosting a virtual node $n^{v} \epsilon N^{V}$ is derived. For every VN request that arrives at VN provider, $Match(n^{v})$ is calculated such that $Match(n^{v}) = {n^{s}} \epsilon G^{S}_{infp}$.\newline
 
@@ -225,13 +228,82 @@ Both substrate and VN request is modeled as a wighted graph G = (V, E) where 'V'
 
 With the experiment on VN splitting algorithm, it was noted that exact solution based method is faster than the heuristic method to find an exact optimal solution. The objective of this work was to present an exact embedding algorithm that can simultaneously perform optimal node and link mapping in one phase. The proposed method is the first to embed online VNs that arrive in dynamic and unpredictable time. Apart from heuristic and exact methods, the work also presents MIP formulation for VN embedding. The objective function of a linear program presented here aims at minimizing the VN embedding cost. Objective function and constraints presented in this work is shown below.
 
+\newpage
+\subsubsection{Efficient Inter-Domain Embedding} \label{inter-domain}
+Inter-domain embedding algorithms require more information about the substrates participating in the embedding process. The algorithms designed for intra-domain embedding does not work with inter-domain embedding. In a single domain embedding the infrastructure providers (Infp) has complete knowledge of the substrate topology and obvious knowledge about the VN request. Thus, it is very much easy that the Infp can straight away make optimal embedding calculation according to the objectives predefined. But for inter-domain embedding, Inps does not know each others topology details. So service provider has to co-ordinate with every Infp who are willing to participate and then a decision is made about mapping individual VN components to the suitable Infp. This is a major drawback when a service provider wants to deploy very large VN in less amount time. Hence a third party broker is essential to decouple service provider and Infp for a flexible and robust inter-domain VN embedding.  T\newline
+
+In the previous section (section \ref{CDE}) we discussed cross domain embedding approach that uses integer linear programming method for solving optimal allocation problem. Here in this section, we discuss another cross-domain embedding approach which presents information sharing scheme between the Inps as most of the Inps are reluctant to expose their topology details. We earlier understood the new roles in the network virtualization technique. Same basic roles (service provider-SP and Infps) are extended in the work \cite{6914301} by adding a broker like role called as virtual network provider (VNP) in order to make centralized embedding decisions. The information sharing scheme presented here allows VNP to have partial knowledge of underlying substrate topologies. \newline
+
+Here we introduce the main concepts presented in the work \cite{6914301} to support inter-domain embedding along with ILP formulation for optimal embedding of VN requests. Following which we discuss the results of this inter-domain embedding approach. 
+
+\begin{enumerate}[label=(\Alph*)]
+\item Business Roles: 
+
+\begin{enumerate}
+\item Service Provider (SP): Service Providers are the customers for virtual network providers (VNP) and request virtual network topology to run on Infps. SP requests VNP with specific resource requirements which is used to create a virtual topology. SPs run their services on top of these VN to provide value based services to the end users.
+
+\item Virtual Network Provider (VNP): VNPs are broker like agents who mediate between SPs and Infps. VNP receives VN request from SP and decompose it into the components like virtual nodes and virtual links. Then these components are embedded on the physical substrates with the help of inter-domain embedding algorithm. 
+
+\item Infrastructure Providers(Infps): These are the operators who lease their physical network resources to deploy virtual topologies. Each Infps provide resources requested from VNP according the agreement between them.
+\end{enumerate}	
+In this work VNP is assumed to be unique which can communicate with every participating Infps. Any VN request involves SP who does not care about physical substrate or the embedding technique, except requesting VNP with VN requirements and paying for it. Similarly underlying physical substrate does not bother about VNs running on them except serving the resource request made by VNP. By this way SPs and Infps are decoupled with the introduction of VNPs.
+	
+\item Information Sharing Scheme:
+
+The solution presented here prevents service providers from multiple negotiations with every Infp and also protects each Infps private information. The new role in the system VNP communicates and negotiates with Infps on behalf of SPs. For this, VNP decomposes a VN request and embeds on the physical substrate. In general the cost of embedding in intra-domain links is cheaper than that of external links. so a VNP, in order to maximize its profit and to minimize the expenditure tries to embed maximum parts of a VN request in the same substrate. This requires each Infp to expose partial information about their resource capacity to the VNPs. 
+
+A VN request comes with resource requirements and desired locations, that is in which physical substrate a particular virtual node has to be embedded. Along with these attributes, each virtual node has a restriction which represents the maximum distance from which the node can be embedded from its desired location. So the resource demand by each virtual node of a VN request is represented by a triple <required capacity, desired location, distance constraint>. An example of a simple VN request is pictured in the figure .\ref{IDE_VN} (a) where, the numbers on the links represent required bandwidth demand of the corresponding virtual link. The figure .\ref{IDE_VN} represents the information known to each role SP, VNP and Infp.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{IDE_VN.png}
+	\caption{Level of Information known to each Role}
+	\label{IDE_VN}
+\end{figure}
+
+A service provider only knows what resource requirements it needs for the VN topology. The information about underlying substrate is not known to the SP. Similarly VNP only knows which Infps are participating or ready to lease their physical resources. And Infps have knowledge of their own topologies only. 
+\hspace*{1cm}Since for VNPs, physical substrate information is critical and Infps does not want to expose it, the information sharing scheme allows Inps to provide a) node location, node capacity and price b) vertices, available bandwidth and unit price of inter-domain link c) length-based price intra-domain links. From this set of information. VNP can easily allocate resource by minimizing the cost in a optimal way since it now has the knowledge of resource price and resource capacity. 
+
+\item 	Inter-Domain VN Embedding:
+
+With the help of business model presented (fig .\ref{IDE_VN}) and the information sharing scheme the embedding process can be carried out in the following steps:
+
+Step 1:  VN Request decomposition: After receiving VN request from the SP, VNP starts decomposing (fig .\ref{IDE_decomp}) the VN into multiple components in a best way, such that the decomposition minimizes the overall expenditure/cost. The next step is to pre-locate the virtual nodes in the substrates. For pre-locating virtual nodes, a set of candidate substrate nodes are selected who can support the resource demands of each virtual node. In the example candidate set for virtual node 'X' is \{A, B\}, 'y' is \{C, D\} and 'Z' is \{J\}.  Locating virtual nodes in this stage also affect path selection for virtual links. Therefore the cost of embedding nodes and links depends on each other. And for VNP, the substrate topology is invisible which makes path selection for virtual link difficult. To overcome this, author assumes a mesh topology for every participating substrates. An augmented network (see fig .\ref{IDE_decomp})is derived by estimating intra-domain topologies which helps VNP to coordinate node mapping and link mapping while decomposing VN request. Because of the co-existing node and link constraints, the embedding problem becomes NP-hard and hence formulation is requires for the optimal embedding. Decomposed VN request is then sent to the Infps for the actual embedding.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{IDE_decomp.png}
+	\caption{VN Decomposition}
+	\label{IDE_decomp}
+\end{figure}
+
+Step 2: Sub-VN request processing: Each participating Infps receive their own share of decomposed VN request from the VNP. These sub-VN requests are embedded by Infps in their own domains based on their own strategies. This phase has same existing intra-domain embedding procedure. From the step 1, virtual nodes of sub-VN requests are already embedded on to the substrate nodes. So the only task for Infps is to map corresponding virtual links from the sub-VN requests. Each Infp will respond to the VNP with either success message or failure message indicating the embedding result of their portion of VN request. 
+
+Step 3: Substrate Resource Allocation: If VNP receives success message from all the Infps, then embedding is considered as success for that particular VN request. For successful embedding VNP replies every Infp with confirmation message to continue with the actual resource allocation to the sub-VN requests. If even one failure message is received from the Infps then the embedding of whole VN request is considered as failure and VNP proceeds to next VN request terminating the current one.
+
+\item Formulation for Embedding:  
+ 
+ Each substrate and VN are modelled as undirected graph $G^{S} = (N^{S}, L^{S})$ and $G^{V} = (N^{V}, L^{V})$ respectively, where $N^{S}$ is set of substrate nodes, $L^{S}$ is set of substrate links and $N^{V}$ is set of virtual nodes, $L^{V}$ is set of virtual links. Each substrate node $n^{S} \epsilon \; N^{S}$ is associated with its geographic location $g(n^{S})$, its available CPU capacity $C(n^{S})$ and a domain index $dom(n^{S})$ representing the domain it belongs. Each substrate link $l^{S}(u, v) \epsilon \; L^{S}$ between the pair of nodes (u, v) has bandwidth capacity $B(l^{S})$. 
+ Let  $p^{S}(m^{S}, n^{S})$ be the set of all possible path from source node $m^{S}$ and destination node $n^{S}$. The available bandwidth of the path $p^{S}$ is given by 
+ \begin{equation}
+ R(P^{S}) = min_{l^{S}\epsilon p^{S}}B(l^{S})
+  \end{equation} 
+Similar to the substrate node, each virtual node $n^{V} \epsilon \; N^{V}$ is associated with its desired location $g(n^{V})$, its CPU demand $C(n^{V})$ and non-negative radius $d^{V}$ representing distance constraint. The capacity demand of each virtual link $l^{V}\epsilon L^{V}$ is denoted by $B(l^{V})$. A candidate set for the virtual node $n^{V} \epsilon N^{S}$ is given by $\theta(n^{V})$ which is a set of all possible substrate nodes that satisfy the distance constraint of the virtual node $n^{V}$. Hence 
+\begin{equation}
+\theta(n^{V}) = \{n^{V} \epsilon N^{S} | dis(g(n^{V}), g(n^{S})) \leq d^{V}\}
+\end{equation}
+Augmented network is given by $G^{A} = (N^{A}, L^{A})$ where $N^{A} = N^{S} \cup N^{V}$ and $L^{A} = L_{vs} \cup L^{ss}$. $L_{vs}$ is a set of inter-domain links and $L^{ss}$ is a set of intra-domain links. Augmented path set is given by $p^{A}(m^{A}, n^{A})$ and available bandwidth for the augmented pth set is given by 
+\begin{equation}
+R(P^{A}) = min_{l^{A}\epsilon p^{A}}B(l^{A})
+\end{equation} 
+
+\end{enumerate}
+
 
 \subsubsection{Edge Wise Node Mapping (EdWiN)} \label{edwin}
 
 All the previous algorithms presented VN embedding methods based on heuristic and exact solution approaches for separate, coordinated and simultaneous mapping of virtual nodes and virtual links. As we know VN embedding is a resource allocation problem. Such an problem is characterized by large number of solutions and finding a best solution depends on some aim or overall objective that is implied in the problem statement. The best optimal solution is that solution which satisfies the condition of the problem as well as the objective of the problem. \newline
 Many previous works presented an optimal VN embedding solutions using Mixed Integer Programming (MIP) formulations. MIP is a mathematical optimization program in which the some or all of the variables are integers. MIP is used in linear programming in which an objective function and constraints related to it are present. The objective function is the goal of the linear programming which can either be maximized and/or minimized and constraints represents restrictions of the problem.
 
-The methods presented in the work \cite{vn_multiple} is the first step in mapping VNs in multiple domains. It also provided a model to simultaneously map multiple VN requests using lookahead property. Another linear programming based VN embedding approach is presented in the paper \cite{vneapproach}. The method proposed here aims at embedding VNs with larger lookahead values with predefined policies. New set of MIP formulation is presented for supporting larger lookahead values and the formulation is named as EdWiN: Edge Wise Node Mapping. Also new approach for describing both substrate structure and virtual networks is provided. The flexibility in describing the physical substrate and virtual networks in this work leads to many use cases for management and orchestration of Software Defined Networks (SDN). SDN decouples control plane and data plane which allows running network applications on top of virtual machines connected to controllers in the control plane. EdWiN method can be used in modelling virtual machines as virtual nodes and using virtual links to connect them. This approach of virtualization can be used as the basic component in the management and orchestration of future carrier networks. Figure \ref{fig: Network Orchestration } shows reference architecture of network orchestration where the network
+The methods presented in the work \cite{vn_multiple} is the first step in mapping VNs in multiple domains. It also provided a model to simultaneously map multiple VN requests using lookahead property. Another linear programming based VN embedding approach is presented in the paper \cite{vneapproach}. The method proposed here aims at embedding VNs with larger lookahead values with predefined policies. New set of MIP formulation is presented for supporting larger lookahead values and the formulation is named as EdWiN: Edge Wise Node Mapping. Also new approach for describing both substrate structure and virtual networks is provided. The flexibility in describing the physical substrate and virtual networks in this work leads to many use cases for management and orchestration of Software Defined Networks (SDN). SDN decouples control plane and data plane which allows running network applications on top of virtual machines connected to controllers in the control plane. EdWiN method can be used in modelling virtual machines as virtual nodes and using virtual links to connect them. This approach of virtualization can be used as the basic component in the management and orchestration of future carrier networks. Figure \ref{fig: Network Orchestration} shows reference architecture of network orchestration where the network
 orchestrator receives VN requests from VN owners and are embedded into virtualised infrastructures.\newline
 
 \begin{figure}[h]
@@ -420,11 +492,10 @@ With the formulation presented here, author compares the approach with previous 
 The MIP formulation presented in EdWiN is run using arbitrary topologies and each substrate node in a topology is assigned a colour with equal probability of assignment. The node capacity is same as that of the nodes used in \cite{vn_multiple}. Multiple VN requests are created with each virtual node assigned a colour. The only condition is that each virtual node must be embedded in a substrate node matching its colour. The VNs are generated sequentially and fed to the algorithm with lookahead values of 1, 20 and 40. For instance EdWin20 gathers 20 VNs and then start embedding characterized by the variable $y_{g} = 1$ by reducing the  capacity of the substrate. It is to be noted that EdWiN algorithm with 20 and 40 VNs results in higher embedding rate compared to EdWiN with 1 VN request. Convergence time might be sometimes important than the optimized embedding rate. It has been observed that the simplicity of the formulation contributes to the rapidness of EdWiN algorithm.\newline
 
 The EdWiN algorithm presented novel MIP formulation for simultaneous embedding of VN requests with increased embedding rate. A two digit gain was observed in terms of embedding rate and resource utilization along with significant reduction in the convergence time. 
-
-\newpage
+ 
 \subsubsection{Recursive and Hierarchical Embedding} \label{md_monitoring}
 
-Most of the algorithms explained above perform multi-domain VN embedding by using simplified models for physical resources where underlying physical networks are modelled as flat infrastructures. In such a network scenario, each VN request is split into multiple sub-graphs. Each sub-graph is then embedded on each physical domain separately that is embedding on multi-domain and single domain separately. For instance in the work explained above in section \ref{sssec:cde}, algorithm to split VN at broker level is based on min-cut and algorithm to embed them at domain level is based on MIP formulation.  
+Most of the algorithms explained above perform multi-domain VN embedding by using simplified models for physical resources where underlying physical networks are modelled as flat infrastructures. In such a network scenario, each VN request is split into multiple sub-graphs. Each sub-graph is then embedded on each physical domain separately that is embedding on multi-domain and single domain separately. For instance in the work explained above in section \ref{CDE}, algorithm to split VN at broker level is based on min-cut and algorithm to embed them at domain level is based on MIP formulation.  
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=12cm, height=6cm]{nw_abst.jpg}
@@ -660,7 +731,7 @@ Here we propose a solution where operators does not need any information about t
 
 Consider a scenario depicted in the figure .\ref{fig: Partial_Embedding} where the physical domains are abstracted as nodes. In the figure node A represents operators own node which receives virtual network requests from the customer. The main idea of this work is that the operator that receives the request (operator A) must  divide the service request into a part that can be hosted by the operator himself and another that might be hosted by other  operators. The part that cannot be hosted by the operator is exposed in an external database to which other operators can subscribe. Other operators may then internally evaluate if it can support this partial request. If they can then a negotiation procedure may take place to support the entire request. This way none of the operators need to expose their topologies to each other.\newline
 
-As we mentioned earlier, orchestrator should be able to calculate the part of VN request it can serve. The partially non-embedded part of the request may then be sent to an external database which can be accessed by other operators. The other operators can periodically check this database to see whether they can satisfy the request partially or completely. Some cases the external database may belong to third party broker. The following section provides brief picture on the system required to achieve the above mentioned goals. For this we define important components that are essential for every domains participating in the embedding process. The figure (fig .\ref{orch}) represents an orchestrator that is responsible for managing and serving incoming VN requests. \newline
+As we mentioned earlier, orchestrator should be able to calculate the part of VN request it can serve. The partially non-embedded part of the request may then be sent to an external database which can be accessed by other operators. The other operators can periodically check this database to see whether they can satisfy the request partially or completely. Some cases the external database may belong to third party broker. The following section provides brief picture on the system required to achieve the above mentioned goals. For this we define important components that are essential for every domains participating in the embedding process. The figure (fig .\ref{orch}) represents basic concept behind an orchestrator, that is responsible for managing and serving incoming VN requests. \newline
 
 \begin{figure}[h]
 	\centering
@@ -691,15 +762,31 @@ After receiving the partial VN request from orch. A, now its orch. B's turn to d
 	\label{fl}
 \end{figure}
 
+In the thesis work, we have used publish/subscribe model for the communication between participating operators. The figure (fig .\ref{pub_sub}) depicts an implementation example for the proposed solution. In general PRM is a concept under each orchestrator domain. But in this implementation, PRM is owned by third party broker and it is accessible by every orchestrator. An operator can access other operator's PRM via HTTP-based RESTful interface. PRM implementation follows publish-subscribe model where orchestrators can subscribe for certain categories of request. In our work, for simplicity we have assigned colours for partial VNs, hence type of the colour is considered as a category. For every partial embedding, the operator creates a partial VN request for the part of the request that failed in embedding. This partial VN request is assigned different colours. Once the partial VN request is generated, the corresponding orchestrator will publish a message in the system. All other orchestrators which have subscribed to a particular colour will receive a message in the form of notification, if a partial VN with the corresponding colour is arrived. \newline
+
+Consider a scenario as in fig .\ref{pub_sub} where three Orchestrators A,B and C are participating in the embedding process. A virtual network request arrives at orch. A with five virtual nodes and four virtual links. orch. A runs the embedding algorithm to embed this VN request locally in its domain. The embedding solution allows only two virtual nodes to be embedded in the orch. A domain by splitting VN request into two parts. One part of VN that can be embedded locally (red coloured nodes and links) and other (Green coloured nodes  and links) that cannot. In this case orch. A publishes the partial VN request (Green coloured nodes and links) to its PRM with the category "\#GREEN". As we said earlier, PRM can be accessed by any operator, orch. B and orch. C subscribes to the PRM of orch. A for the category "\#GREEN". Since the subscription matches with the published category of VN request, both orchestrators B and C receives notification from orch. A. The notification includes basic information about the partial VN offer and contact details of the publisher. After receiving the notification both orchestrator B and C contact administrator of orch. A requesting the partial VN details. In response to this, orch. A delivers partial VN with the category "\#GREEN" \text{ to} the orchestators B and C. Also, orchestrators can aggregate all the partial VN offers and publish them at once. The receiving orchestrators can select some or all of the partial VNs based on some optimization criteria.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{psm1.png}
+	\caption{Publish-Subscribe Model 1}
+	\label{pub_sub}
+\end{figure}
+
+Now at the receiving end of partial VN offers,  the orchestrator's SRM wakes up the system to contact publisher of the partial VN. After negotiating with the publisher, receiving SRM gets complete details of published partial VN offer. SRM runs algorithm to check whether it can locally support the offer in its domain. Figure (fig .\ref{psm2}) below depicts receiving end of the orchestration. Here both orchestrator B and C receive notification. But only the request of orch. C is accepted by the publisher (orch. A). So orch. C sends an embedding offer saying it can embed the partial VN published by orch. A.
+If orch. A accepts the request from orch. C then the embedding procedure is continued together by orch. A and C, which results in complete embedding of that VN request. If only part of partial request is supported by orch. C then the remaining part is jointly published to PRM by orch. A and C.\newline
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{psm2.png}
+	\caption{Publish-Subscribe Model 2}
+	\label{psm2}
+\end{figure}
+
+There might be more than one orchestrator that receives the same partial VN offer, in which case, all those orchestrators send embedding requests to the publisher. Multiple offers are queued up in the PRM and it depends on the publishing orchestrator to select one of the requests from the PRM (option A) based on optimization criteria. Embedding offer can be sent via PRM directly (optin B) to the requester also. By this way a VN request can be successfully embedded across multiple domains.\newline
 
 
 
+Now we have an overview of embedding process with the help of orchestrator components and pub-sub system. The implementation of the above explained concepts require three main tasks. At first we need to implement embedding algorithm for partial embedding that is able to calculate part of VN that can be embedded locally in operators own domain. We need a communication system between operators for sharing the partial VNs and offers. At last we need a orchestrator that can manage embedding a complete VN request across multiple operator domains. The following sections provides complete details on implementation phase of these three tasks. The tasks also fulfil the requirements of the thesis work mentioned in the introduction part.
 
-Now we have an overview of embedding process with the help of orchestrator components and pub-sub system. To achieve  
-
-
-
-************************************Show animation of overall process of my thesis (3 pages) explaining all the 3 requirements in detail****************************
 \newpage
 \subsection{Requirement I: Partial Embedding}
 At first we present the approach for embedding partial services on the physical substrate. To do this, we model an MILP for operator A considering
