--- a/biblography.bib
+++ b/biblography.bib
@@ -131,6 +131,16 @@ YEAR="",
 	doi={10.1109/NETSOFT.2015.7116141}, 
 	month={April},}
 
+@INPROCEEDINGS{6914301, 
+author={M. Shen and K. Xu and K. Yang and H. H. Chen}, 
+booktitle={2014 IEEE 22nd International Symposium of Quality of Service (IWQoS)}, 
+title={Towards efficient virtual network embedding across multiple network domains}, 
+year={2014}, 
+pages={61-70}, 
+keywords={computational complexity;embedded systems;integer programming;virtual private networks;virtualisation;InP;VN embedding problem;VNP;broker-like role;business roles;centralized embedding decisions;information sharing scheme;infrastructure providers;integer constraints;integer programming problem;inter-domain embedding problem;multiple network domains;network virtualization;partial substrate information;polynomial time;virtual network embedding;virtual network provider;Bandwidth;Indium phosphide;Information management;Manganese;Substrates;Topology}, 
+doi={10.1109/IWQoS.2014.6914301}, 
+ISSN={1548-615X}, 
+month={May},}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
